# unbias-plus

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  Dockerfile.vllm  README.md  deployment-deepdive.html  entrypoint.sh  index.html  mkdocs.yml  nginx.conf  objects.inv  pyproject.toml
.github/workflows/: code_checks.yml  deploy-demo.yml  docs.yml  integration_tests.yml  publish.yml  unit_tests.yml
api/: index.html
docs/: api.md  index.md  license.md  team.md  user_guide.md
license/: index.html
search/: search_index.json
src/sftpipeline/: Readme.md  dataextraction.py  dataextraction_test.py  datageneration_async.py  evaluate_models.py  inference_final.py  sfttraining.py
src/unbias_plus/: __init__.py  api.py  cli.py  formatter.py  model.py  parser.py  pipeline.py  prompt.py  schema.py
src/unbias_plus/demo/static/: script.js  style.css
src/unbias_plus/demo/templates/: index.html
team/: index.html
tests/: conftest.py
tests/unbias_plus/: __init__.py  test_api.py  test_formatter.py  test_parser.py  test_pipeline.py  test_prompt.py  test_schema.py
user_guide/: index.html
