[project]
name = "unbias-plus"
version = "0.1.0"
description = "Bias detection and debiasing using a single LLM"
readme = "README.md"
authors = [
    {name = "Ahmed Y. Radwan", email = "ahmed.radwan@vectorinstitute.ai"}
]
license = "Apache-2.0"
repository = "https://github.com/VectorInstitute/unbias-plus"
requires-python = ">=3.10,<3.12"

dependencies = [
    # Core ML/DL
    "torch==2.6.0+cu124",
    "torchaudio==2.6.0+cu124",
    "torchvision==0.21.0+cu124",
    "transformers>=4.35.0",
    "accelerate==1.10.1",
    # Fine-tuning
    "peft>=0.17.1",
    "bitsandbytes==0.48.1",
    "trl==0.22.2",
    "unsloth[colab-new]",
    "unsloth-zoo>=2025.10.10",
    # Build tools (for optional flash-attn / CUDA builds)
    "cmake==4.1.0",
    "ninja>=1.13.0",
    "setuptools>=80.9.0",
    "wheel>=0.45.1",
    "build>=1.3.0",
    # Data handling
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyarrow==15.0.2",
    "datasets>=2.18.0",
    "safetensors>=0.4.0",
    "jsonlines>=4.0.0",
    # Validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.11.0",
    # Utilities
    "tqdm>=4.67.3",
    "python-dotenv==1.1",
    "einops>=0.8.1",
    "tiktoken==0.7.0",
    # API server
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]

[project.optional-dependencies]
# Install with: uv sync --extra train (requires CUDA/nvcc to build)
train = [
    "flash-attn==2.7.3",
]

[project.scripts]
unbias-plus = "unbias_plus.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.0.0",
    "pytest-asyncio>=0.25.2",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "types-PyYAML>=6.0.0",
    "pre-commit>=3.0.0",
    "pip>=26.0",
    "pip-audit>=2.7.3",
    "codecov>=2.1.13",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
    "jinja2>=3.1.6",
    "ipykernel>=6.29.5",
    "ipython>=8.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unbias_plus"]
artifacts = ["src/unbias_plus/demo/**"]

[tool.uv]
default-groups = ["dev", "docs"]
index-url = "https://pypi.org/simple"
extra-index-url = ["https://download.pytorch.org/whl/cu124"]
index-strategy = "unsafe-best-match"

[tool.uv.sources]
unsloth = { git = "https://github.com/unslothai/unsloth.git" }
unsloth-zoo = { git = "https://github.com/unslothai/unsloth-zoo.git" }

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]

[tool.mypy]
python_version = "3.10"
follow_imports = "normal"
ignore_missing_imports = false
install_types = true
pretty = true
non_interactive = true
allow_untyped_defs = false
no_implicit_optional = true
check_untyped_defs = true
namespace_packages = true
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
mypy_path = "src"

[tool.ruff]
line-length = 88
include = ["*.py", "pyproject.toml", "*.ipynb"]
exclude = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "COM", # flake8-commas
    "C4",  # flake8-comprehensions
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "ICN", # flake8-import-conventions
    "Q",   # flake8-quotes
    "RSE", # flake8-raise
    "D",   # pydocstyle
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle
    "N",   # pep8-naming
    "ERA", # eradicate
    "PL",  # pylint
]
fixable = [
    "A", "B", "COM", "C4", "RET", "SIM", "ICN",
    "Q", "RSE", "D", "E", "F", "I", "W", "N", "ERA", "PL",
]
ignore = [
    "B905",    # zip() without explicit strict= parameter
    "E501",    # line too long
    "D203",    # 1 blank line required before class docstring
    "D213",    # Multi-line docstring summary should start at second line
    "PLR2004", # Replace magic number with named constant
    "PLR0913", # Too many arguments
    "COM812",  # Missing trailing comma
    "ERA001",  # Found commented-out code
    "A001",    # Shadowing builtin (common for torch)
    "A002",    # Shadowing builtin in function (common for torch)
    "D301",    # r-strings for docstrings with backslashes
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]
"tests/*" = ["D103", "D105", "D107"]

[tool.ruff.lint.pep8-naming]
ignore-names = ["X*", "setUp"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
python_files = ["test_*.py"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration_test: marks tests as integration tests",
]
filterwarnings = [
    "ignore:builtin type .* has no __module__ attribute:DeprecationWarning",
]

[tool.coverage.run]
source = ["src/unbias_plus"]
omit = ["tests/*", "*__init__.py"]
